--- a/src/main/res/layout/activity_login.xml
+++ b/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView">
 
         <EditText
-            android:id="@+id/login"
+            android:id="@+id/login_field_login"
             android:layout_width="match_parent"
             android:layout_height="43dp"
             android:background="@drawable/edit_round"
@@ -43,7 +43,7 @@
             android:padding="10dp" />
 
         <EditText
-            android:id="@+id/password"
+            android:id="@+id/login_field_password"
             android:layout_width="match_parent"
             android:layout_height="43dp"
             android:layout_marginTop="16dp"
@@ -63,18 +63,19 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/login_button_register"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 android:layout_weight="1"
+                android:textColor="@color/colorBlack"
                 android:background="@drawable/edit_round"
                 android:fontFamily="@font/open_sans_bold"
                 android:text="@string/login_button_register" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/login_button_login"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
