--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorPrimaryDark">#3A3A3A</color>
     <color name="colorWhiteGray">#e0e0e0</color>
     <color name="colorWhiteGrayContent">#a0a0a0</color>
+    <color name="colorBlack">#000</color>
 </resources>
