--- a/src/main/res/layout/activity_login.xml
+++ b/src/main/res/layout/activity_login.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
-    >
+    tools:context=".LoginActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/login_image"
         android:layout_width="0dp"
         android:layout_height="220dp"
         android:layout_marginTop="135dp"
@@ -19,6 +18,7 @@
         app:srcCompat="@drawable/logo_1024" />
 
     <LinearLayout
+        android:id="@+id/login_group"
         android:layout_width="307dp"
         android:layout_height="201dp"
         android:layout_marginStart="32dp"
@@ -27,7 +27,7 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
+        app:layout_constraintTop_toBottomOf="@+id/login_image">
 
         <EditText
             android:id="@+id/login_field_login"
@@ -69,10 +69,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
                 android:layout_weight="1"
-                android:textColor="@color/colorBlack"
                 android:background="@drawable/edit_round"
                 android:fontFamily="@font/open_sans_bold"
-                android:text="@string/login_button_register" />
+                android:text="@string/login_button_register"
+                android:textAllCaps="false"
+                android:textColor="@color/colorBlack" />
 
             <Button
                 android:id="@+id/login_button_login"
@@ -84,6 +85,7 @@
                 android:background="@drawable/button_round"
                 android:fontFamily="@font/open_sans_bold"
                 android:text="@string/login_button_login"
+                android:textAllCaps="false"
                 android:textColor="#fff" />
         </LinearLayout>
 
