--- a/src/main/res/layout/activity_login.xml
+++ b/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="43dp"
             android:background="@drawable/edit_round"
-            android:drawableStart="@drawable/ic_person_black_24dp"
+            android:drawableStart="@drawable/drawable_person"
             android:drawablePadding="8dp"
             android:ems="10"
             android:fontFamily="@font/open_sans"
@@ -48,7 +48,7 @@
             android:layout_height="43dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/edit_round"
-            android:drawableStart="@drawable/ic_lock_black_24dp"
+            android:drawableStart="@drawable/drawable_lock"
             android:drawablePadding="8dp"
             android:ems="10"
             android:fontFamily="@font/open_sans"
