--- a/src/main/res/layout/activity_register.xml
+++ b/src/main/res/layout/activity_register.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.346"
-        app:srcCompat="@drawable/ic_arrow_drop_up_black_24dp" />
+        app:srcCompat="@drawable/drawable_arrow" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -68,7 +68,7 @@
             android:layout_height="43dp"
             android:layout_marginTop="48dp"
             android:background="@drawable/edit_round"
-            android:drawableStart="@drawable/ic_person_black_24dp"
+            android:drawableStart="@drawable/drawable_person"
             android:drawablePadding="8dp"
             android:ems="10"
             android:fontFamily="@font/open_sans"
@@ -82,7 +82,7 @@
             android:layout_height="43dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/edit_round"
-            android:drawableStart="@drawable/ic_lock_black_24dp"
+            android:drawableStart="@drawable/drawable_lock"
             android:drawablePadding="8dp"
             android:ems="10"
             android:fontFamily="@font/open_sans"
