--- a/app/src/main/res/layout/activity_app_actual.xml
+++ b/app/src/main/res/layout/activity_app_actual.xml
@@ -45,13 +45,13 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/app_actual_text_heartrate"
-                    android:layout_width="match_parent"
+                    android:id="@+id/app_actual_text_heartbeat"
+                    android:layout_width="140dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:fontFamily="@font/open_sans_bold"
@@ -68,6 +68,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="4dp"
                     android:layout_weight="1"
+                    android:scaleType="fitStart"
                     android:visibility="invisible"
                     app:srcCompat="@drawable/drawable_heart"
                     tools:ignore="InefficientWeight" />
@@ -78,7 +79,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/open_sans"
-                android:text="@string/app_actual_text_heartrate"
+                android:text="@string/app_actual_text_heartbeat"
                 android:textColor="@color/colorBlack"
                 android:textSize="18sp" />
 
