--- a/app/src/main/res/layout/activity_app_actual.xml
+++ b/app/src/main/res/layout/activity_app_actual.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/app_history_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.AppActualActivity">
@@ -149,10 +150,10 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:contentDescription="@string/app_actual_text_arrow"
         android:layout_width="310dp"
         android:layout_height="45dp"
         android:layout_marginBottom="12dp"
+        android:contentDescription="@string/app_actual_text_arrow"
         android:rotation="180"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
