--- a/app/src/main/res/layout/activity_app_actual.xml
+++ b/app/src/main/res/layout/activity_app_actual.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/app_history_layout"
+    android:id="@+id/app_actual_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.AppActualActivity">
@@ -17,7 +17,6 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -147,17 +146,5 @@
         </LinearLayout>
 
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="310dp"
-        android:layout_height="45dp"
-        android:layout_marginBottom="12dp"
-        android:contentDescription="@string/app_actual_text_arrow"
-        android:rotation="180"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/drawable_arrow" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
