--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/connect_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.ConnectActivity">
@@ -9,12 +10,12 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="310dp"
-        android:layout_height="478dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="78dp"
-        android:layout_marginEnd="48dp"
-        android:gravity="center"
+        android:layout_height="628dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="104dp"
+        android:layout_marginEnd="32dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/connect_text_small"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
