--- a/app/src/main/res/layout/activity_app_actual.xml
+++ b/app/src/main/res/layout/activity_app_actual.xml
@@ -5,7 +5,7 @@
     android:id="@+id/app_actual_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.AppActualActivity">
+    tools:context=".ui.activity.AppActualActivity">
 
     <LinearLayout
         android:layout_width="310dp"
