--- a/app/src/main/res/layout/activity_app_history.xml
+++ b/app/src/main/res/layout/activity_app_history.xml
@@ -5,7 +5,7 @@
     android:id="@+id/app_history_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.AppHistoryActivity">
+    tools:context=".ui.activity.AppHistoryActivity">
 
     <TextView
         android:id="@+id/textView"
