--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -5,7 +5,7 @@
     android:id="@+id/connect_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ConnectActivity">
+    tools:context=".ui.activity.ConnectActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
