Added full application scheme

--- a/app/src/main/res/layout/fragment_app_history.xml
+++ b/app/src/main/res/layout/fragment_app_history.xml
@@ -5,16 +5,16 @@
     android:id="@+id/app_history_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.AppHistoryActivity">
+    tools:context=".ui.activity.LoginActivity">
+
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HISTORY ACTIVITY"
+        android:id="@+id/textview5"
+        android:layout_width="52dp"
+        android:layout_height="19dp"
+        android:text="History"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
