--- a/app/src/main/res/layout/fragment_app_analysis.xml
+++ b/app/src/main/res/layout/fragment_app_analysis.xml
@@ -2,16 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/app_heart_layout"
+    android:id="@+id/app_analysis_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.AppHeartActivity">
+    tools:context=".ui.activity.LoginActivity"
+    android:background="@color/colorRed">
 
     <TextView
-        android:id="@+id/asd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HEART ACTIVITY"
+        android:id="@+id/textView2"
+        android:layout_width="60dp"
+        android:layout_height="19dp"
+        android:text="Analysis"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
