Few UI changes, history fragment added

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo_1024" />
+        app:srcCompat="@drawable/drawable_logo_1024" />
 
     <LinearLayout
         android:id="@+id/login_group"
