--- a/app/src/main/res/layout/activity_app_view.xml
+++ b/app/src/main/res/layout/activity_app_view.xml
@@ -15,4 +15,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/app_connect_icon"
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:layout_marginBottom="18dp"
+        android:contentDescription="@string/app_connect_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/drawable_connect"
+        android:alpha="0.4" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
