--- a/app/src/main/res/layout/fragment_app_history.xml
+++ b/app/src/main/res/layout/fragment_app_history.xml
@@ -7,14 +7,79 @@
     android:layout_height="match_parent"
     tools:context=".ui.activity.LoginActivity">
 
-
-    <TextView
-        android:id="@+id/textview5"
-        android:layout_width="52dp"
-        android:layout_height="19dp"
-        android:text="History"
+    <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="64dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+    <TextView
+        android:id="@+id/app_history_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/open_sans_bold"
+        android:text="@string/app_history_name"
+        android:textColor="@color/colorAccent"
+        android:textSize="42sp" />
+
+    <TextView
+        android:id="@+id/app_history_measurements"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/open_sans_bold"
+        android:text="@string/app_history_measurements"
+        android:textAllCaps="true"
+        android:textColor="@color/colorBlack" />
+
+        <LinearLayout
+            android:id="@+id/app_history_no_data"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/app_history_no_data_image"
+                android:layout_width="wrap_content"
+                android:layout_height="268dp"
+                android:layout_marginTop="72dp"
+                app:srcCompat="@drawable/dummy_no_data"
+                android:contentDescription="@string/app_history_no_data_image" />
+
+            <TextView
+                android:id="@+id/app_history_no_data_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/open_sans"
+                android:gravity="center"
+                android:text="@string/app_history_no_data"
+                android:textColor="@color/colorBlack"/>
+        </LinearLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/app_history_entry_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+            </LinearLayout>
+
+        </ScrollView>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
