--- a/app/src/main/res/layout/fragment_app_today.xml
+++ b/app/src/main/res/layout/fragment_app_today.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.activity.LoginActivity">
 
-
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
@@ -69,6 +68,7 @@
                 android:scaleType="fitStart"
                 app:srcCompat="@drawable/drawable_heart"
                 tools:ignore="InefficientWeight"
+                android:visibility="invisible"
                 android:contentDescription="@string/app_heart_icon" />
         </LinearLayout>
 
