--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="36dp"
         android:layout_marginBottom="8dp"
-        android:contentDescription="@string/image_back"
+        android:contentDescription="@string/register_image_back"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
