--- a/app/src/main/res/layout/fragment_app_settings.xml
+++ b/app/src/main/res/layout/fragment_app_settings.xml
@@ -53,8 +53,8 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="start"
                 android:layout_weight="1"
+                android:gravity="start"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -93,8 +93,8 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="end"
                 android:layout_weight="1"
+                android:gravity="end"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -131,6 +131,40 @@
             </LinearLayout>
 
         </LinearLayout>
+
+        <RadioGroup
+            android:id="@+id/radioSexButton"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            android:layout_marginTop="24dp"
+            android:gravity="center"
+            android:layout_weight="1">
+
+            <RadioButton
+                android:id="@+id/radioMale"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:paddingBottom="4dp"
+                android:fontFamily="@font/open_sans_bold"
+                android:buttonTint="@color/colorAccent"
+                android:textColor="@color/colorWhiteGray"
+                android:text="Mężczyzna" />
+
+            <RadioButton
+                android:id="@+id/radioFemale"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:paddingBottom="4dp"
+                android:fontFamily="@font/open_sans_bold"
+                android:buttonTint="@color/colorAccent"
+                android:textColor="@color/colorWhiteGray"
+                android:text="Kobieta" />
+        </RadioGroup>
 
     </LinearLayout>
 
