--- a/app/src/main/res/layout/activity_app_view.xml
+++ b/app/src/main/res/layout/activity_app_view.xml
@@ -4,7 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/app_view_layout"
     tools:context=".ui.activity.AppViewActivity">
+
+
+    <ProgressBar
+        android:id="@+id/app_view_progress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="241dp"
+        android:layout_height="73dp"
+        app:layout_constraintBottom_toBottomOf="@+id/view_pager"
+        app:layout_constraintEnd_toEndOf="@+id/view_pager"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
@@ -25,6 +37,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/drawable_connect"
+        android:visibility="invisible"
         android:alpha="0.4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
